fix test when running on java 11