@@ -3,6 +3,7 @@ package co.com.bancolombia.utils;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.stream.Collectors;
 import org.junit.Assert;
 
 public class CAAssert extends Assert {
@@ -16,6 +17,9 @@ public class CAAssert extends Assert {
 
   public static void assertFilesExistsInDir(String dir, String... files) {
     assertFilesExists(
-        Arrays.stream(files).map(file -> dir + file).toList().toArray(new String[files.length]));
+        Arrays.stream(files)
+            .map(file -> dir + file)
+            .collect(Collectors.toList())
+            .toArray(new String[files.length]));
   }
 }
